--- a/index.html
+++ b/index.html
@@ -4,84 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            margin: 0;
-            background-color: #8bc3b6;
-        }
-    #clock{
-        background-color: white;
-        border: 30px solid #ef6d53;
-        margin: auto;
-        border-radius: 50%;
-        width: 500px;
-        height: 500px;
-        position: relative;
-        top: calc(50vh - 30vh);
-    }
-    #hour{
-        width: 30%;
-        height: 15px;
-        border-radius: 10px;
-        background-color: #ffd63e;
-        position: absolute;
-        top: calc(50% - 5px);
-        left: calc(50% - 5px);
-        transform-origin: left center;
-    }
-    #minute{
-        width: 40%;
-        height: 12px;
-        position: absolute;
-        border-radius: 5px;
-        background-color: #ffd63e;
-        top: calc(50% - 5px);
-        left: calc(50% - 5px);
-        transform-origin: left center;
-    }
-    #second{
-        width: 45%;
-        height: 5px;
-        position: absolute;
-        border-radius: 5px;
-        background-color: #d13d33;
-        top: calc(50% - 5px);
-        left: calc(50% - 5px);
-        transform-origin: left center;
-    }
-    .dot{
-        width: 5%;
-        height: 5%;
-        border-radius: 50%;
-        background-color: black;
-        position: absolute;
-    }
-    .dot1{
-        top: 5%;
-        left: 47%;
-    }
-
-    .dot2{
-        left: 5%;
-        top: 47%;
-    }
-
-    .dot3{
-        right: 5%;
-        top: 47%;
-    }
-    .dot4{
-        bottom: 5%;
-        left: 47%;
-    }
-    .dot5{
-        bottom: 47%;
-        left: 47%;
-        z-index: 1;
-        background-color:#ffd63e;
-    }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <title>時鐘</title>
 </head>
 <body>
     <!-- 想法一：咕咕鐘　每十五分鐘會有一隻鳥出來跳舞
@@ -98,19 +22,8 @@
     <div id="hour"></div>
     <div id="minute"></div>
     <div id="second"></div>
+    <script></script>
 </div>
-    <script>
-        const hour = document.getElementById('hour')
-        const minute = document.getElementById('minute')
-        const second = document.getElementById('second')
-
-        setInterval(() =>{
-            const date = new Date()
-            hour.style.transform = `rotate(${date.getHours()*30-90}deg)`
-            minute.style.transform = `rotate(${date.getMinutes()*6-90}deg)`
-            second.style.transform = `rotate(${date.getSeconds()*6-90}deg)`
-        }, 1000
-        )
-    </script>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
